# StellarS3

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs  s3.rs  types.rs
src/components/: ConnectionManager.tsx  ContextMenu.tsx  FileExplorer.tsx  Settings.tsx  Sidebar.tsx  StatusBar.tsx  Toast.tsx
src/hooks/: useKeyboardShortcuts.ts  useLocalStorage.ts
src/types/: index.ts
src/utils/: fileIcons.ts  formatters.ts
