[package]
name = "stellars3"
version = "2.0.0"
description = "Modern S3 file manager with AMOLED black theme"
authors = ["StellarS3 Team"]
license = "MIT"
repository = ""
edition = "2021"


[dependencies]
tauri = { version = "2.7.0", features = ["unstable"] }
tauri-plugin-fs = "2.4.1"
tauri-plugin-shell = "2.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
aws-sdk-s3 = "1.0"
aws-config = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
mime_guess = "2.0"
futures = "0.3"
bytes = "1.0"
base64 = "0.22"

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
